Fixed word-wrap on meals/index with pre tag added a search function on meals/index some things added for paginated meals/index

--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -250,6 +250,8 @@ h1{
 
 pre {
     font-family: 'Roboto Condensed', sans-serif;
+    white-space: pre-wrap; 
+    word-wrap: break-word;
 }
 
 /*--------------------------------------------------------*/
